<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/ingredients_root"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="30dp"
    android:orientation="vertical"
    tools:context="com.example.disen.chefu.IngredientsActivity">
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/browser"
        android:contentDescription="@string/browser"
        style="@style/fab_style"
        android:src="@drawable/ic_language_black_36dp"
        android:transitionName="@string/active"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:id="@+id/ingredient_recyclv"
        android:layout_height="wrap_content"
        tools:context="com.example.disen.chefu.IngredientsActivity">
    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/share_action"
        style="@style/fab_style"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_menu_share"
        android:transitionName="@string/active"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content" />


</LinearLayout>
</android.support.v4.widget.NestedScrollView>